<resources>
    <string name="app_name">NeoWeather</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="status_image_description">Network status</string>
    <!-- Units settings -->
    <string name="units_settings_title">Units</string>
    <string name="temp_unit_toggle_text">Temp Unit</string>
    <string name="fahrenheit">F°</string>
    <string name="celsius">C°</string>
    <string name="speed_unit_toggle_text">Speed Unit</string>
    <string name="mph">mph</string>
    <string name="kph">km/h</string>
    <string name="rain_unit">Rain Unit</string>
    <string name="millimeters">mm</string>
    <string name="inches">in</string>
    <!-- Notifications settings -->
    <string name="notifications_settings_title">Notifications</string>
    <string name="notifications_enable">Enable notifications</string>
    <string name="notifications_interval">Update Interval</string>
    <!-- Data settings -->
    <string name="data_settings_title">Data</string>
    <string name="background_location">Background location</string>
    <string name="update_in_background">Update in the background</string>
    <!-- <string name="interval_menu_text">Select</string> -->
    <string-array name="interval_options">
        <item>One hour</item>
        <item>Three hours</item>
        <item>Six hours</item>
        <item>Twelve hours</item>
    </string-array>
    <string-array name="temp_unit_options">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="speed_unit_options">
        <item>Kph</item>
        <item>Mph</item>
    </string-array>
    <string-array name="rain_unit_options">
        <item>Millimeters</item>
        <item>Inches</item>
    </string-array>
    <!-- MaterialAlertDialog -->
    <string name="permanent_location_dialog_title">Permanent location permission</string>
    <string name="permanent_location_default_message">
        For a better experience, /n
        we suggest enabling location tracking in the background
    </string>
    <string name="permanent_location_toggle_message">
        If you want to receive notifications on /n
        a location provide by GPS services, you should /n
        enable location permission in the background
    </string>
    <string name="permanent_location_dialog_button">Go to settings</string>
    <string name="deny_background">Not now</string>
    <!-- Days of the Week -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <!-- Months -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!-- Date Info String -->
    <string name="date_info">%1$s of %2$s</string>
    <!-- Sunrise/Sunset -->
    <string name="sun_timing">%1$s: %2$d:%3$d</string>
</resources>