<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.neoweather.ui.home.HomeFragment"
        android:label="@string/app_name" >
        <argument
            android:name="place_name"
            app:argType="string"
            android:defaultValue=""/>
        <argument
            android:name="latitude"
            app:argType="long"
            android:defaultValue="999L"/>
        <argument
            android:name="longitude"
            app:argType="long"
            android:defaultValue="999L"/>
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.neoweather.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.neoweather.ui.search.SearchFragment"
        android:label="@string/search" >
        <action
            android:id="@+id/search_to_home"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"
            app:destination="@id/homeFragment" >
            <argument
                android:name="place_name"
                app:argType="string" />
            <argument
                android:name="latitude"
                app:argType="long"/>
            <argument
                android:name="longitude"
                app:argType="long"/>
        </action>
    </fragment>
</navigation>